--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="new-quote" id="new-quote">New Quote</button>
       </div>
     </div>
-    <!-- Loader -->
+    <!-- Spinner -->
     <div class="spinner" id="spinner">
       <div class="cube1"></div>
       <div class="cube2"></div>
